--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "node": "10.6.0"
   },
   "scripts": {
-    "dev": "next",
     "start": "cross-env NODE_ENV=dev npm-run-all --parallel start:app start:server",
     "start:app": "PORT=3000 node server.js",
     "start:server": "netlify-lambda serve functions",
+    "build": "run-p build:**",
     "build:app": "next build && next export",
     "build:lambda": "netlify-lambda build functions"
   },
